--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ Link{
     text-decoration: none;
 }
 .underline{
-    text-decoration: none;
+    text-decoration: none !important
 }
 .dicnun{
 width: 100%;
