--- a/src/App.css
+++ b/src/App.css
@@ -91,8 +91,8 @@ color: rgb(96, 96, 221);
 }
 
 
-.underline h2 p{
-    text-decoration: none !important
+.underline{
+    text-decoration: none !important;
 }
 .dicnun{
 width: 100%;
